@@ -303,10 +303,10 @@ public class AdvancedMarginalCongestionPricingIT {
 		Assertions.assertEquals(1, moneyEvents.size(), "Wrong number of money events.");
 
 		// test if the delay is 2 seconds
-		double delay = congestionEvents.get(0).getDelay();
+		double delay = congestionEvents.getFirst().getDelay();
 		Assertions.assertEquals(2.0, delay, MatsimTestUtils.EPSILON, "Wrong delay.");
 
-		double amountFromEvent = moneyEvents.get(0).getAmount();
+		double amountFromEvent = moneyEvents.getFirst().getAmount();
 		double tripDelayDisutility = delay / 3600. * controler.getConfig().scoring().getDefaultModeParams().get(TransportMode.car).getMarginalUtilityOfTraveling() * (-1);
 		// with delay --> 70.570685898554200
 		// without delay --> 70.573360291244900
@@ -383,10 +383,10 @@ public class AdvancedMarginalCongestionPricingIT {
 		Assertions.assertEquals(1, moneyEvents.size(), "Wrong number of money events.");
 
 		// test if the delay is 2 seconds
-		double delay = congestionEvents.get(0).getDelay();
+		double delay = congestionEvents.getFirst().getDelay();
 		Assertions.assertEquals(2.0, delay, MatsimTestUtils.EPSILON, "Wrong delay.");
 
-		double amountFromEvent = moneyEvents.get(0).getAmount();
+		double amountFromEvent = moneyEvents.getFirst().getAmount();
 		double tripDelayDisutility = delay / 3600. * controler.getConfig().scoring().getDefaultModeParams().get(TransportMode.car).getMarginalUtilityOfTraveling() * (-1);
 
 		// home duration morning: 28800.
